force-app/main/default/objects/POC_Team__c/POC_Team__c.object-meta.xml
<CustomObject>
    <label>POC Team</label>
    <nameField>
        <label>POC Team Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>POC Team</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>