force-app/main/default/objects/POC_Team__c/fields/Directors__c.field-meta.xml
<CustomField>
    <fullName>Directors__c</fullName>
    <label>Director</label>
    <type>TextArea</type>
</CustomField>