force-app/main/default/objects/POC_Team__c/fields/Members_Count__c.field-meta.xml
<CustomField>
    <fullName>Members_Count__c</fullName>
    <label>Members Count</label>
    <summaryForeignKey>POC_Team_Member__c.POC_Team__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>