force-app/main/default/objects/POC_Team__c/fields/Round_Robin__c.field-meta.xml
<CustomField>
    <fullName>Round_Robin__c</fullName>
    <label>Round Robin</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>