force-app/main/default/objects/POC_Team__c/fields/Type_of_business__c.field-meta.xml
<CustomField>
    <fullName>Type_of_business__c</fullName>
    <label>Type of business</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Express/Surface</fullName>
            </value>
            <value>
                <fullName>B2B</fullName>
            </value>
            <value>
                <fullName>C2C</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>