force-app/main/default/objects/POC_Team__c/fields/Volume_potential__c.field-meta.xml
<CustomField>
    <fullName>Volume_potential__c</fullName>
    <label>Volume potential</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>