force-app/main/default/objects/POC_Team__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Directors__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>